parser.output
Terminals unused in grammar

   SPACE
   TAB
   ERROR
   ENTER
   COMENTARIO
   number
   CHARACTER
   arbol


Grammar

    0 $accept: S $end

    1 S: Includelist Start
    2  | MODULE Start
    3  | Start
    4  | %empty

    5 Includelist: INCLUDE Exp Includelist
    6            | INCLUDE Exp

    7 Start: MAIN LLAVEABRE Sec LLAVECIERRA Start
    8      | MAIN LLAVEABRE Sec LLAVECIERRA
    9      | Typedef IDENTIFIER PARABRE Varlist PARCIERRA LLAVEABRE Sec LLAVECIERRA Start
   10      | Typedef IDENTIFIER PARABRE Varlist PARCIERRA LLAVEABRE Sec LLAVECIERRA
   11      | TYPE STRUCT IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA Start
   12      | TYPE STRUCT IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA
   13      | TYPE UNION IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA Start
   14      | TYPE UNION IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA
   15      | TYPE IDENTIFIER IGUAL Constructor Start
   16      | TYPE IDENTIFIER IGUAL Constructor

   17 Constructor: Typedef

   18 Scope: CREATE LLAVEABRE Declist LLAVECIERRA EXECUTE LLAVEABRE Sec LLAVECIERRA
   19      | CREATE LLAVEABRE Declist LLAVECIERRA EXECUTE LLAVEABRE LLAVECIERRA
   20      | CREATE LLAVEABRE LLAVECIERRA EXECUTE LLAVEABRE Sec LLAVECIERRA
   21      | CREATE LLAVEABRE LLAVECIERRA EXECUTE LLAVEABRE LLAVECIERRA
   22      | EXECUTE LLAVEABRE Sec LLAVECIERRA
   23      | EXECUTE LLAVEABRE LLAVECIERRA

   24 Typedef: LCHAR
   25        | BOOL
   26        | LINT
   27        | LFLOAT
   28        | LSTRING
   29        | ARRAY Typedef CORCHETEABRE Exp CORCHETECIERRA
   30        | LIST Typedef
   31        | TUPLE PARABRE Typedef COMA Typedef PARCIERRA
   32        | POINTER Typedef
   33        | IDENTIFIER
   34        | UNIT

   35 Varlist: Typedef IDENTIFIER COMA Varlist
   36        | Typedef REFERENCE IDENTIFIER COMA Varlist
   37        | Typedef IDENTIFIER
   38        | Typedef REFERENCE IDENTIFIER

   39 Declist: Typedef IDENTIFIER PUNTOCOMA Declist
   40        | Typedef IDENTIFIER IGUAL Exp PUNTOCOMA Declist
   41        | Typedef IDENTIFIER PUNTOCOMA
   42        | Typedef IDENTIFIER IGUAL Exp PUNTOCOMA
   43        | TYPE IDENTIFIER IGUAL Typedef PUNTOCOMA
   44        | TYPE IDENTIFIER IGUAL Typedef PUNTOCOMA Declist

   45 Subdeclist: Typedef IDENTIFIER PUNTOCOMA Declist
   46           | Typedef IDENTIFIER IGUAL Exp PUNTOCOMA Declist
   47           | Typedef IDENTIFIER PUNTOCOMA
   48           | Typedef IDENTIFIER IGUAL Exp PUNTOCOMA

   49 Sec: Inst PUNTOCOMA Sec
   50    | Inst PUNTOCOMA

   51 Inst: Scope
   52     | Ids IGUAL Exp
   53     | SALIDA Exp
   54     | ENTRADA Exp
   55     | IF PARABRE Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA ELSE LLAVEABRE Sec LLAVECIERRA
   56     | IF PARABRE Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA
   57     | FOR PARABRE Typedef IDENTIFIER IGUAL Exp COMA CORCHETEABRE Exp COMA Exp CORCHETECIERRA COMA Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA
   58     | WHILE PARABRE Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA
   59     | NEW PARABRE IDENTIFIER PARCIERRA
   60     | FREE PARABRE IDENTIFIER PARCIERRA
   61     | IDENTIFIER PARABRE List PARCIERRA
   62     | RETURN Exp
   63     | BREAK

   64 Exp: Exp SUMA Exp
   65    | Exp RESTA Exp
   66    | Exp MULT Exp
   67    | Exp DIV Exp
   68    | Exp MOD Exp
   69    | PARABRE Exp PARCIERRA
   70    | RESTA Exp
   71    | Exp POW
   72    | Exp IGUALA Exp
   73    | Exp DISTINTOA Exp
   74    | Exp MENOR Exp
   75    | Exp MAYOR Exp
   76    | Exp MENORIGUAL Exp
   77    | Exp MAYORIGUAL Exp
   78    | IDENTIFIER PARABRE List PARCIERRA
   79    | Exp DISYUNCION Exp
   80    | Exp CONJUNCION Exp
   81    | NEGACION Exp
   82    | Literals
   83    | OPTR IDENTIFIER
   84    | OPTR PARABRE IDENTIFIER PARCIERRA

   85 Literals: Ids
   86         | CHAR
   87         | FLOAT
   88         | INT
   89         | STRING
   90         | LLAVEABRE List LLAVECIERRA
   91         | CORCHETEABRE List CORCHETECIERRA
   92         | PARABRE Exp COMA Exp PARCIERRA
   93         | TRUE
   94         | FALSE

   95 Ids: IDENTIFIER PUNTO Ids
   96    | IDENTIFIER

   97 List: Exp COMA List
   98     | Exp


Terminals, with rules where they appear

$end (0) 0
LLAVEABRE (1) 7 8 9 10 11 12 13 14 18 19 20 21 22 23 55 56 57 58 90
LLAVECIERRA (2) 7 8 9 10 11 12 13 14 18 19 20 21 22 23 55 56 57 58
    90
CORCHETEABRE (3) 29 57 91
CORCHETECIERRA (4) 29 57 91
PARABRE (5) 9 10 31 55 56 57 58 59 60 61 69 78 84 92
PARCIERRA (6) 9 10 31 55 56 57 58 59 60 61 69 78 84 92
MAIN (7) 7 8
INCLUDE (10) 5 6
CREATE (11) 18 19 20 21
EXECUTE (12) 18 19 20 21 22 23
MODULE (13) 2
PUNTOCOMA (14) 39 40 41 42 43 44 45 46 47 48 49 50
WHILE (15) 58
FOR (16) 57
BREAK (17) 63
IF (18) 55 56
ELSE (19) 55
RETURN (20) 62
STRUCT (21) 11 12
UNION (22) 13 14
ARRAY (23) 29
LIST (24) 30
TUPLE (25) 31
LSTRING (26) 28
LFLOAT (27) 27
LCHAR (28) 24
BOOL (29) 25
LINT (30) 26
POINTER (31) 32
TRUE (32) 93
FALSE (33) 94
IGUALA (34) 72
DISTINTOA (35) 73
SUMA (36) 64
RESTA (37) 65 70
MOD (38) 68
DIV (39) 67
POW (40) 71
MULT (41) 66
IGUAL (42) 15 16 40 42 43 44 46 48 52 57
MENORIGUAL (43) 76
MENOR (44) 74
MAYORIGUAL (45) 77
MAYOR (46) 75
NEGACION (47) 81
CONJUNCION (48) 80
DISYUNCION (49) 79
SPACE (50)
TAB (51)
COMA (52) 31 35 36 57 92 97
SALIDA (53) 53
ENTRADA (54) 54
IDENTIFIER (55) 9 10 11 12 13 14 15 16 33 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 57 59 60 61 78 83 84 95 96
CHAR (56) 86
FLOAT (57) 87
PUNTO (58) 95
INT (59) 88
STRING (60) 89
ERROR (61)
ENTER (62)
COMENTARIO (63)
TYPE (64) 11 12 13 14 15 16 43 44
NEW (65) 59
FREE (66) 60
REFERENCE (67) 36 38
OPTR (68) 83 84
UNIT (69) 34
error (256)
number (258)
CHARACTER (259)
arbol (260)


Nonterminals, with rules where they appear

$accept (73)
    on left: 0
S (74)
    on left: 1 2 3 4, on right: 0
Includelist (75)
    on left: 5 6, on right: 1 5
Start (76)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 1 2 3 7 9 11 13
    15
Constructor (77)
    on left: 17, on right: 15 16
Scope (78)
    on left: 18 19 20 21 22 23, on right: 51
Typedef (79)
    on left: 24 25 26 27 28 29 30 31 32 33 34, on right: 9 10 17 29
    30 31 32 35 36 37 38 39 40 41 42 43 44 45 46 47 48 57
Varlist (80)
    on left: 35 36 37 38, on right: 9 10 35 36
Declist (81)
    on left: 39 40 41 42 43 44, on right: 18 19 39 40 44 45 46
Subdeclist (82)
    on left: 45 46 47 48, on right: 11 12 13 14
Sec (83)
    on left: 49 50, on right: 7 8 9 10 18 20 22 49 55 56 57 58
Inst (84)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 49 50
Exp (85)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84, on right: 5 6 29 40 42 46 48 52 53 54 55 56 57 58 62
    64 65 66 67 68 69 70 71 72 73 74 75 76 77 79 80 81 92 97 98
Literals (86)
    on left: 85 86 87 88 89 90 91 92 93 94, on right: 82
Ids (87)
    on left: 95 96, on right: 52 85 95
List (88)
    on left: 97 98, on right: 61 78 90 91 97


State 0

    0 $accept: . S $end

    MAIN        shift, and go to state 1
    INCLUDE     shift, and go to state 2
    MODULE      shift, and go to state 3
    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    TYPE        shift, and go to state 14
    UNIT        shift, and go to state 15

    $default  reduce using rule 4 (S)

    S            go to state 16
    Includelist  go to state 17
    Start        go to state 18
    Typedef      go to state 19


State 1

    7 Start: MAIN . LLAVEABRE Sec LLAVECIERRA Start
    8      | MAIN . LLAVEABRE Sec LLAVECIERRA

    LLAVEABRE  shift, and go to state 20


State 2

    5 Includelist: INCLUDE . Exp Includelist
    6            | INCLUDE . Exp

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 34
    Literals  go to state 35
    Ids       go to state 36


State 3

    2 S: MODULE . Start

    MAIN        shift, and go to state 1
    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    TYPE        shift, and go to state 14
    UNIT        shift, and go to state 15

    Start    go to state 37
    Typedef  go to state 19


State 4

   29 Typedef: ARRAY . Typedef CORCHETEABRE Exp CORCHETECIERRA

    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    UNIT        shift, and go to state 15

    Typedef  go to state 38


State 5

   30 Typedef: LIST . Typedef

    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    UNIT        shift, and go to state 15

    Typedef  go to state 39


State 6

   31 Typedef: TUPLE . PARABRE Typedef COMA Typedef PARCIERRA

    PARABRE  shift, and go to state 40


State 7

   28 Typedef: LSTRING .

    $default  reduce using rule 28 (Typedef)


State 8

   27 Typedef: LFLOAT .

    $default  reduce using rule 27 (Typedef)


State 9

   24 Typedef: LCHAR .

    $default  reduce using rule 24 (Typedef)


State 10

   25 Typedef: BOOL .

    $default  reduce using rule 25 (Typedef)


State 11

   26 Typedef: LINT .

    $default  reduce using rule 26 (Typedef)


State 12

   32 Typedef: POINTER . Typedef

    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    UNIT        shift, and go to state 15

    Typedef  go to state 41


State 13

   33 Typedef: IDENTIFIER .

    $default  reduce using rule 33 (Typedef)


State 14

   11 Start: TYPE . STRUCT IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA Start
   12      | TYPE . STRUCT IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA
   13      | TYPE . UNION IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA Start
   14      | TYPE . UNION IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA
   15      | TYPE . IDENTIFIER IGUAL Constructor Start
   16      | TYPE . IDENTIFIER IGUAL Constructor

    STRUCT      shift, and go to state 42
    UNION       shift, and go to state 43
    IDENTIFIER  shift, and go to state 44


State 15

   34 Typedef: UNIT .

    $default  reduce using rule 34 (Typedef)


State 16

    0 $accept: S . $end

    $end  shift, and go to state 45


State 17

    1 S: Includelist . Start

    MAIN        shift, and go to state 1
    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    TYPE        shift, and go to state 14
    UNIT        shift, and go to state 15

    Start    go to state 46
    Typedef  go to state 19


State 18

    3 S: Start .

    $default  reduce using rule 3 (S)


State 19

    9 Start: Typedef . IDENTIFIER PARABRE Varlist PARCIERRA LLAVEABRE Sec LLAVECIERRA Start
   10      | Typedef . IDENTIFIER PARABRE Varlist PARCIERRA LLAVEABRE Sec LLAVECIERRA

    IDENTIFIER  shift, and go to state 47


State 20

    7 Start: MAIN LLAVEABRE . Sec LLAVECIERRA Start
    8      | MAIN LLAVEABRE . Sec LLAVECIERRA

    CREATE      shift, and go to state 48
    EXECUTE     shift, and go to state 49
    WHILE       shift, and go to state 50
    FOR         shift, and go to state 51
    BREAK       shift, and go to state 52
    IF          shift, and go to state 53
    RETURN      shift, and go to state 54
    SALIDA      shift, and go to state 55
    ENTRADA     shift, and go to state 56
    IDENTIFIER  shift, and go to state 57
    NEW         shift, and go to state 58
    FREE        shift, and go to state 59

    Scope  go to state 60
    Sec    go to state 61
    Inst   go to state 62
    Ids    go to state 63


State 21

   70 Exp: RESTA . Exp

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 64
    Literals  go to state 35
    Ids       go to state 36


State 22

   81 Exp: NEGACION . Exp

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 65
    Literals  go to state 35
    Ids       go to state 36


State 23

   90 Literals: LLAVEABRE . List LLAVECIERRA

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 66
    Literals  go to state 35
    Ids       go to state 36
    List      go to state 67


State 24

   91 Literals: CORCHETEABRE . List CORCHETECIERRA

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 66
    Literals  go to state 35
    Ids       go to state 36
    List      go to state 68


State 25

   69 Exp: PARABRE . Exp PARCIERRA
   92 Literals: PARABRE . Exp COMA Exp PARCIERRA

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 69
    Literals  go to state 35
    Ids       go to state 36


State 26

   93 Literals: TRUE .

    $default  reduce using rule 93 (Literals)


State 27

   94 Literals: FALSE .

    $default  reduce using rule 94 (Literals)


State 28

   78 Exp: IDENTIFIER . PARABRE List PARCIERRA
   95 Ids: IDENTIFIER . PUNTO Ids
   96    | IDENTIFIER .

    PARABRE  shift, and go to state 70
    PUNTO    shift, and go to state 71

    $default  reduce using rule 96 (Ids)


State 29

   86 Literals: CHAR .

    $default  reduce using rule 86 (Literals)


State 30

   87 Literals: FLOAT .

    $default  reduce using rule 87 (Literals)


State 31

   88 Literals: INT .

    $default  reduce using rule 88 (Literals)


State 32

   89 Literals: STRING .

    $default  reduce using rule 89 (Literals)


State 33

   83 Exp: OPTR . IDENTIFIER
   84    | OPTR . PARABRE IDENTIFIER PARCIERRA

    PARABRE     shift, and go to state 72
    IDENTIFIER  shift, and go to state 73


State 34

    5 Includelist: INCLUDE Exp . Includelist
    6            | INCLUDE Exp .
   64 Exp: Exp . SUMA Exp
   65    | Exp . RESTA Exp
   66    | Exp . MULT Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   71    | Exp . POW
   72    | Exp . IGUALA Exp
   73    | Exp . DISTINTOA Exp
   74    | Exp . MENOR Exp
   75    | Exp . MAYOR Exp
   76    | Exp . MENORIGUAL Exp
   77    | Exp . MAYORIGUAL Exp
   79    | Exp . DISYUNCION Exp
   80    | Exp . CONJUNCION Exp

    CONJUNCION  shift, and go to state 74
    DISYUNCION  shift, and go to state 75
    IGUALA      shift, and go to state 76
    DISTINTOA   shift, and go to state 77
    MENOR       shift, and go to state 78
    MAYOR       shift, and go to state 79
    MAYORIGUAL  shift, and go to state 80
    MENORIGUAL  shift, and go to state 81
    SUMA        shift, and go to state 82
    RESTA       shift, and go to state 83
    POW         shift, and go to state 84
    MULT        shift, and go to state 85
    DIV         shift, and go to state 86
    MOD         shift, and go to state 87
    INCLUDE     shift, and go to state 2

    $default  reduce using rule 6 (Includelist)

    Includelist  go to state 88


State 35

   82 Exp: Literals .

    $default  reduce using rule 82 (Exp)


State 36

   85 Literals: Ids .

    $default  reduce using rule 85 (Literals)


State 37

    2 S: MODULE Start .

    $default  reduce using rule 2 (S)


State 38

   29 Typedef: ARRAY Typedef . CORCHETEABRE Exp CORCHETECIERRA

    CORCHETEABRE  shift, and go to state 89


State 39

   30 Typedef: LIST Typedef .

    $default  reduce using rule 30 (Typedef)


State 40

   31 Typedef: TUPLE PARABRE . Typedef COMA Typedef PARCIERRA

    ARRAY       shift, and go to state 4
    LIST        shift, and go to state 5
    TUPLE       shift, and go to state 6
    LSTRING     shift, and go to state 7
    LFLOAT      shift, and go to state 8
    LCHAR       shift, and go to state 9
    BOOL        shift, and go to state 10
    LINT        shift, and go to state 11
    POINTER     shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    UNIT        shift, and go to state 15

    Typedef  go to state 90


State 41

   32 Typedef: POINTER Typedef .

    $default  reduce using rule 32 (Typedef)


State 42

   11 Start: TYPE STRUCT . IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA Start
   12      | TYPE STRUCT . IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA

    IDENTIFIER  shift, and go to state 91


State 43

   13 Start: TYPE UNION . IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA Start
   14      | TYPE UNION . IDENTIFIER LLAVEABRE Subdeclist LLAVECIERRA

    IDENTIFIER  shift, and go to state 92


State 44

   15 Start: TYPE IDENTIFIER . IGUAL Constructor Start
   16      | TYPE IDENTIFIER . IGUAL Constructor

    IGUAL  shift, and go to state 93


State 45

    0 $accept: S $end .

    $default  accept


State 46

    1 S: Includelist Start .

    $default  reduce using rule 1 (S)


State 47

    9 Start: Typedef IDENTIFIER . PARABRE Varlist PARCIERRA LLAVEABRE Sec LLAVECIERRA Start
   10      | Typedef IDENTIFIER . PARABRE Varlist PARCIERRA LLAVEABRE Sec LLAVECIERRA

    PARABRE  shift, and go to state 94


State 48

   18 Scope: CREATE . LLAVEABRE Declist LLAVECIERRA EXECUTE LLAVEABRE Sec LLAVECIERRA
   19      | CREATE . LLAVEABRE Declist LLAVECIERRA EXECUTE LLAVEABRE LLAVECIERRA
   20      | CREATE . LLAVEABRE LLAVECIERRA EXECUTE LLAVEABRE Sec LLAVECIERRA
   21      | CREATE . LLAVEABRE LLAVECIERRA EXECUTE LLAVEABRE LLAVECIERRA

    LLAVEABRE  shift, and go to state 95


State 49

   22 Scope: EXECUTE . LLAVEABRE Sec LLAVECIERRA
   23      | EXECUTE . LLAVEABRE LLAVECIERRA

    LLAVEABRE  shift, and go to state 96


State 50

   58 Inst: WHILE . PARABRE Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA

    PARABRE  shift, and go to state 97


State 51

   57 Inst: FOR . PARABRE Typedef IDENTIFIER IGUAL Exp COMA CORCHETEABRE Exp COMA Exp CORCHETECIERRA COMA Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA

    PARABRE  shift, and go to state 98


State 52

   63 Inst: BREAK .

    $default  reduce using rule 63 (Inst)


State 53

   55 Inst: IF . PARABRE Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA ELSE LLAVEABRE Sec LLAVECIERRA
   56     | IF . PARABRE Exp PARCIERRA LLAVEABRE Sec LLAVECIERRA

    PARABRE  shift, and go to state 99


State 54

   62 Inst: RETURN . Exp

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 100
    Literals  go to state 35
    Ids       go to state 36


State 55

   53 Inst: SALIDA . Exp

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 101
    Literals  go to state 35
    Ids       go to state 36


State 56

   54 Inst: ENTRADA . Exp

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33

    Exp       go to state 102
    Literals  go to state 35
    Ids       go to state 36


State 57

   61 Inst: IDENTIFIER . PARABRE List PARCIERRA
   95 Ids: IDENTIFIER . PUNTO Ids
   96    | IDENTIFIER .

    PARABRE  shift, and go to state 103
    PUNTO    shift, and go to state 71

    $default  reduce using rule 96 (Ids)


State 58

   59 Inst: NEW . PARABRE IDENTIFIER PARCIERRA

    PARABRE  shift, and go to state 104


State 59

   60 Inst: FREE . PARABRE IDENTIFIER PARCIERRA

    PARABRE  shift, and go to state 105


State 60

   51 Inst: Scope .

    $default  reduce using rule 51 (Inst)


State 61

    7 Start: MAIN LLAVEABRE Sec . LLAVECIERRA Start
    8      | MAIN LLAVEABRE Sec . LLAVECIERRA

    LLAVECIERRA  shift, and go to state 106


State 62

   49 Sec: Inst . PUNTOCOMA Sec
   50    | Inst . PUNTOCOMA

    PUNTOCOMA  shift, and go to state 107


State 63

   52 Inst: Ids . IGUAL Exp

    IGUAL  shift, and go to state 108


State 64

   64 Exp: Exp . SUMA Exp
   65    | Exp . RESTA Exp
   66    | Exp . MULT Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   70    | RESTA Exp .
   71    | Exp . POW
   72    | Exp . IGUALA Exp
   73    | Exp . DISTINTOA Exp
   74    | Exp . MENOR Exp
   75    | Exp . MAYOR Exp
   76    | Exp . MENORIGUAL Exp
   77    | Exp . MAYORIGUAL Exp
   79    | Exp . DISYUNCION Exp
   80    | Exp . CONJUNCION Exp

    POW   shift, and go to state 84
    MULT  shift, and go to state 85
    DIV   shift, and go to state 86
    MOD   shift, and go to state 87

    $default  reduce using rule 70 (Exp)


State 65

   64 Exp: Exp . SUMA Exp
   65    | Exp . RESTA Exp
   66    | Exp . MULT Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   71    | Exp . POW
   72    | Exp . IGUALA Exp
   73    | Exp . DISTINTOA Exp
   74    | Exp . MENOR Exp
   75    | Exp . MAYOR Exp
   76    | Exp . MENORIGUAL Exp
   77    | Exp . MAYORIGUAL Exp
   79    | Exp . DISYUNCION Exp
   80    | Exp . CONJUNCION Exp
   81    | NEGACION Exp .

    $default  reduce using rule 81 (Exp)


State 66

   64 Exp: Exp . SUMA Exp
   65    | Exp . RESTA Exp
   66    | Exp . MULT Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   71    | Exp . POW
   72    | Exp . IGUALA Exp
   73    | Exp . DISTINTOA Exp
   74    | Exp . MENOR Exp
   75    | Exp . MAYOR Exp
   76    | Exp . MENORIGUAL Exp
   77    | Exp . MAYORIGUAL Exp
   79    | Exp . DISYUNCION Exp
   80    | Exp . CONJUNCION Exp
   97 List: Exp . COMA List
   98     | Exp .

    CONJUNCION  shift, and go to state 74
    DISYUNCION  shift, and go to state 75
    IGUALA      shift, and go to state 76
    DISTINTOA   shift, and go to state 77
    MENOR       shift, and go to state 78
    MAYOR       shift, and go to state 79
    MAYORIGUAL  shift, and go to state 80
    MENORIGUAL  shift, and go to state 81
    SUMA        shift, and go to state 82
    RESTA       shift, and go to state 83
    POW         shift, and go to state 84
    MULT        shift, and go to state 85
    DIV         shift, and go to state 86
    MOD         shift, and go to state 87
    COMA        shift, and go to state 109

    $default  reduce using rule 98 (List)


State 67

   90 Literals: LLAVEABRE List . LLAVECIERRA

    LLAVECIERRA  shift, and go to state 110


State 68

   91 Literals: CORCHETEABRE List . CORCHETECIERRA

    CORCHETECIERRA  shift, and go to state 111


State 69

   64 Exp: Exp . SUMA Exp
   65    | Exp . RESTA Exp
   66    | Exp . MULT Exp
   67    | Exp . DIV Exp
   68    | Exp . MOD Exp
   69    | PARABRE Exp . PARCIERRA
   71    | Exp . POW
   72    | Exp . IGUALA Exp
   73    | Exp . DISTINTOA Exp
   74    | Exp . MENOR Exp
   75    | Exp . MAYOR Exp
   76    | Exp . MENORIGUAL Exp
   77    | Exp . MAYORIGUAL Exp
   79    | Exp . DISYUNCION Exp
   80    | Exp . CONJUNCION Exp
   92 Literals: PARABRE Exp . COMA Exp PARCIERRA

    CONJUNCION  shift, and go to state 74
    DISYUNCION  shift, and go to state 75
    IGUALA      shift, and go to state 76
    DISTINTOA   shift, and go to state 77
    MENOR       shift, and go to state 78
    MAYOR       shift, and go to state 79
    MAYORIGUAL  shift, and go to state 80
    MENORIGUAL  shift, and go to state 81
    SUMA        shift, and go to state 82
    RESTA       shift, and go to state 83
    POW         shift, and go to state 84
    MULT        shift, and go to state 85
    DIV         shift, and go to state 86
    MOD         shift, and go to state 87
    PARCIERRA   shift, and go to state 112
    COMA        shift, and go to state 113


State 70

   78 Exp: IDENTIFIER PARABRE . List PARCIERRA

    RESTA         shift, and go to state 21
    NEGACION      shift, and go to state 22
    LLAVEABRE     shift, and go to state 23
    CORCHETEABRE  shift, and go to state 24
    PARABRE       shift, and go to state 25
    TRUE          shift, and go to state 26
    FALSE         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    CHAR          shift, and go to state 29
    FLOAT         shift, and go to state 30
    INT           shift, and go to state 31
    STRING        shift, and go to state 32
    OPTR          shift, and go to state 33
